--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,5 +1,5 @@
-@import "libs/null";
-@import "libs/fonts";
+@import 'libs/null';
+@import 'libs/fonts';
 // @import "libs/animate";
 
 body {
@@ -10,12 +10,13 @@ body {
    overflow: hidden;
 }
 .container {
-   max-width: 984px;
+   max-width: 1014px;
    margin: auto;
-   // padding: 0 15px;
+   padding: 0 15px;
 }
 // @import "base/animations";
 // @import "base/variables";
-@import "blocks/promo";
+@import 'blocks/promo';
+@import 'blocks/introduction';
 // @import "blocks/footer";
 // @import "base/media";
