Action section finished

--- a/src/scss/blocks/_promo.scss
+++ b/src/scss/blocks/_promo.scss
@@ -1,6 +1,7 @@
 .promo {
    padding-top: 18px;
    height: 148px;
+   background-color: #f9fbff;
    position: relative;
    margin-bottom: 48px;
    &__info {
