--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -18,5 +18,6 @@ body {
 // @import "base/variables";
 @import 'blocks/promo';
 @import 'blocks/introduction';
+@import 'blocks/action';
 // @import "blocks/footer";
 // @import "base/media";
