Why section finished

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -19,5 +19,6 @@ body {
 @import 'blocks/promo';
 @import 'blocks/introduction';
 @import 'blocks/action';
+@import 'blocks/why';
 // @import "blocks/footer";
 // @import "base/media";
