Section FAQ almost finished

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -20,5 +20,6 @@ body {
 @import 'blocks/introduction';
 @import 'blocks/action';
 @import 'blocks/why';
+@import 'blocks/faq';
 // @import "blocks/footer";
-// @import "base/media";
+@import 'base/media';
