--- a/src/scss/base/_media.scss
+++ b/src/scss/base/_media.scss
@@ -3,6 +3,14 @@
 @media (max-width: 992px) {
 }
 @media (max-width: 768px) {
+   .promo {
+      &__info {
+         & h1 {
+            font-size: calc(25px + 7 * ((100vw - 320px) / (1014 - 320)));
+            line-height: calc(31px + 9 * ((100vw - 320px) / (1014 - 320)));
+         }
+      }
+   }
 }
 @media (max-width: 576px) {
 }
