Introduction and Action sections responsive almost done

--- a/src/scss/base/_media.scss
+++ b/src/scss/base/_media.scss
@@ -1,6 +1,16 @@
 @media (max-width: 1200px) {
 }
 @media (max-width: 992px) {
+   .action {
+      &__row {
+         h2 {
+            font-size: calc(16px + 10 * ((100vw - 320px) / (1014 - 320)));
+         }
+      }
+      &__button {
+         align-self: center;
+      }
+   }
 }
 @media (max-width: 768px) {
    .promo {
@@ -11,8 +21,87 @@
          }
       }
    }
+   .introduction {
+      &__row {
+         gap: 15px;
+      }
+      &__item {
+         padding: 0 5px;
+      }
+      &__icon {
+         & img {
+            width: calc(88px + 45 * ((100vw - 576px) / (1014 - 576)));
+            height: calc(75px + 41 * ((100vw - 576px) / (1014 - 576)));
+            // width: 103px;
+            // height: 86px;
+         }
+      }
+      // &__icons {
+      //    flex-direction: column;
+      // }
+      &__desc {
+         font-weight: 600;
+         // font-size: 13px;
+      }
+   }
+   .action {
+      padding: 24px 22px;
+   }
 }
 @media (max-width: 576px) {
+   .introduction {
+      &__row {
+         flex-wrap: wrap;
+         justify-content: center;
+         gap: 25px;
+      }
+      &__item {
+         width: 205px;
+      }
+      &__icon {
+         & img {
+            width: 133px;
+            height: 116px;
+         }
+      }
+      &__desc {
+         text-align: center;
+      }
+   }
+   .action {
+      &__row {
+         flex-direction: column;
+         h2 {
+            align-self: start;
+            font-size: 26px;
+         }
+      }
+   }
 }
-@media (max-width: 320px) {
+@media (max-width: 470px) {
+   .introduction {
+      &__row {
+         gap: 5px;
+      }
+      &__item {
+         display: flex;
+         align-items: center;
+         gap: 17.36px;
+         width: 100%;
+      }
+      &__icons {
+         align-items: flex-start;
+      }
+      &__icon {
+         width: 82.69px;
+         height: 89.02px;
+         & img {
+            height: 100%;
+            width: 100%;
+         }
+      }
+      &__desc {
+         align-items: center;
+      }
+   }
 }
