--- a/src/scss/blocks/_action.scss
+++ b/src/scss/blocks/_action.scss
@@ -1,7 +1,7 @@
 .action {
    background-color: #f1f3f9;
-   width: 984px;
-   height: 90px;
+   max-width: 984px;
+   min-height: 90px;
    margin-bottom: 48px;
    padding: 24px 48px;
    &__row {
