--- a/src/scss/blocks/_introduction.scss
+++ b/src/scss/blocks/_introduction.scss
@@ -5,11 +5,12 @@
       font-weight: 600;
       font-size: 26px;
       line-height: 32px;
+      margin-bottom: 24px;
    }
    &__row {
       display: flex;
       gap: 24px;
-      padding-top: 24px;
+      // padding-top: 24px;
    }
 
    &__item {
