--- a/src/scss/blocks/_faq.scss
+++ b/src/scss/blocks/_faq.scss
@@ -9,12 +9,14 @@
       margin-bottom: 20px;
    }
    &__column {
+      width: 100%;
    }
    &__item {
       // display: flex;
       // flex-direction: column;
       // flex: 0 1 78px;
       padding: 14px;
+      border-radius: 6px;
       // min-height: 78px;
    }
 
@@ -59,38 +61,33 @@
 }
 
 details {
-   width: 984px;
-   background-color: #afc0e2;
-
-   // background-color: #f9fbff;
+   max-width: 984px;
+   // background-color: #afc0e2;
+   background-color: #f9fbff;
    margin-bottom: 12px;
-   // background-color: #f9f9f9;
-   // border: 1px solid #ddd;
-   // border-radius: 4px;
-   // padding: 0.5em;
-   // margin-bottom: 1em;
 }
 
 summary {
-   // font-weight: bold;
    cursor: pointer;
-   // position: relative;
-
+   display: flex;
    list-style: none;
    &::-webkit-details-marker {
       display: none;
    }
-   // &::after {
-   //    content: '';
-   //    position: absolute;
-   //    width: 18.75px;
-   //    height: 9px;
-   //    left: 3.12px;
-   //    top: 16.5px;
-   //    background-color: #6d778b;
-   // }
+   &::after {
+      content: '';
+      width: 22px;
+      height: 11px;
+      background: url('../../src/icons/faq/arrow-down.png') center center/ cover no-repeat;
+      transition: 0.2s;
+      position: absolute;
+      top: 4px;
+      right: 2px;
+   }
 }
-
+details[open] > summary::after {
+   transform: rotate(180deg);
+}
 details[open] {
    // background-color: #eef;
 }
