--- a/src/scss/blocks/_why.scss
+++ b/src/scss/blocks/_why.scss
@@ -14,6 +14,10 @@
 
    &__item {
       padding: 24px;
+      background-color: #f1f3f9;
+      border-radius: 8px;
+      // max-width: 312px;
+      width: 32%;
       & img {
          width: 30px;
          margin-bottom: 17px;
@@ -32,5 +36,6 @@
       font-size: 14px;
       line-height: 18px;
       margin-bottom: 8px;
+      color: #363a47;
    }
 }
